tests/input/ill-typed/incorrect_arity/my-test.stella
language core;

fn first(a : Nat, b : Nat) -> Nat {
        return a;
}

fn main () -> Nat {
        return first(1, 2);
}